[tool.poetry]
name = "batting-order-optimizer"
version = "0.1.0"
description = "NPB選手の成績を基にした最適打順のシミュレーションアプリ"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.1"
pandas = "^2.2.3"
numpy = "^2.2.5"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
